--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
         <meta name="UTF-8">
         <meta charset="viewport" content="width=width-device initial-scale=1.0">
         <title>REGISTRATION</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <p>You do not have an account?</p>
